<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/txt_home_name"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/o_semi_bold"
            android:gravity="center"
            android:text="@string/barcelona"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_away_name"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/o_semi_bold"
            android:gravity="center"
            android:text="@string/real_madrid"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/o_regular"
            android:text="@string/date"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/txt_away_name"
            app:layout_constraintStart_toEndOf="@+id/txt_home_name"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_vs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/o_regular"
            android:text="@string/vs"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/txt_away_name"
            app:layout_constraintEnd_toStartOf="@+id/txt_away_name"
            app:layout_constraintStart_toEndOf="@+id/txt_home_name"
            app:layout_constraintTop_toTopOf="@+id/txt_away_name" />

        <TextView
            android:id="@+id/txt_stadium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/camp_nou"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_vs" />

        <TextView
            android:id="@+id/txt_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/o_regular"
            android:text="@string/time"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/txt_away_name"
            app:layout_constraintStart_toEndOf="@+id/txt_home_name"
            app:layout_constraintTop_toBottomOf="@+id/txt_date" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>