<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackground"
    android:fitsSystemWindows="true"
    tools:context=".view.DetailMatchActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="220dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/ic_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/ic_back"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/o_semi_bold"
                    android:text="@string/match_overview"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/ic_back" />

                <TextView
                    android:id="@+id/txt_league_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/o_regular"
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView"
                    tools:text="@string/epl" />

                <TextView
                    android:id="@+id/txt_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/o_regular"
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_league_name"
                    tools:text="@string/date" />

                <ImageView
                    android:id="@+id/img_logo_home"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_date"
                    tools:ignore="ContentDescription"
                    tools:src="@drawable/barcelona" />

                <ImageView
                    android:id="@+id/img_logo_away"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_date"
                    tools:ignore="ContentDescription"
                    tools:src="@drawable/madrid" />

                <TextView
                    android:id="@+id/txt_score_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:fontFamily="@font/o_semi_bold"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="@+id/img_logo_home"
                    app:layout_constraintEnd_toStartOf="@+id/textView2"
                    app:layout_constraintTop_toTopOf="@+id/img_logo_home"
                    tools:text="@string/_1" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/o_semi_bold"
                    android:text="@string/vs"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="@+id/img_logo_home"
                    app:layout_constraintEnd_toStartOf="@+id/img_logo_away"
                    app:layout_constraintStart_toEndOf="@+id/img_logo_home"
                    app:layout_constraintTop_toTopOf="@+id/img_logo_away" />

                <TextView
                    android:id="@+id/txt_score_away"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:fontFamily="@font/o_semi_bold"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="@+id/img_logo_away"
                    app:layout_constraintStart_toEndOf="@+id/textView2"
                    app:layout_constraintTop_toTopOf="@+id/img_logo_away"
                    tools:text="@string/_3" />

                <TextView
                    android:id="@+id/txt_stadium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/o_regular"
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/img_logo_home"
                    tools:text="@string/camp_nou" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nest_scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mainBackground"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- statistic-->

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>