<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackground"
    android:fitsSystemWindows="true"
    tools:context=".view.DetailLeagueActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/ic_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/ic_back"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/img_logo_detail"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/epl"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ic_back"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/txt_league_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/o_semi_bold"
                    android:text="@string/epl"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@+id/img_logo_detail"
                    app:layout_constraintTop_toBottomOf="@+id/ic_back" />

                <TextView
                    android:id="@+id/txt_web_url"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:drawablePadding="4dp"
                    android:fontFamily="@font/o_regular"
                    android:text="@string/web_url"
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                    app:drawableStartCompat="@drawable/ic_web"
                    app:layout_constraintStart_toEndOf="@+id/img_logo_detail"
                    app:layout_constraintTop_toBottomOf="@+id/txt_league_name" />

                <TextView
                    android:id="@+id/txt_facebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:drawablePadding="4dp"
                    android:fontFamily="@font/o_regular"
                    android:text="@string/facebook_url"
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                    app:drawableStartCompat="@drawable/ic_facebook"
                    app:layout_constraintStart_toEndOf="@+id/img_logo_detail"
                    app:layout_constraintTop_toBottomOf="@+id/txt_web_url" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nest_scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mainBackground"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                app:tabBackground="@drawable/selector_tab"
                app:tabGravity="center"
                app:tabIndicatorHeight="0dp"
                app:tabPaddingEnd="32dp"
                app:tabPaddingStart="32dp"
                app:tabRippleColor="@null"
                app:tabSelectedTextColor="@android:color/white"
                app:tabTextAppearance="@style/TabTextAppearance" />

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>